Correcting bug for withCurrentUser HOC; ADding bottom spacing for Hero Carousel on HPR.

--- a/src/client/styles/app/views/home/index.scss
+++ b/src/client/styles/app/views/home/index.scss
@@ -246,6 +246,7 @@ i.magnifier::before {
   height: auto;
   @media screen and (min-width: $sm) {
     height: 450px;
+    margin-bottom: 20px;
   }
   .carousel {
     width: 100%;
